plugins {
  id 'org.springframework.boot' version '2.5.0'
  id 'io.spring.dependency-management' version '1.0.11.RELEASE'
  id 'java'
}

allprojects {
  apply plugin: 'org.springframework.boot'
  apply plugin: 'io.spring.dependency-management'
  apply plugin: 'java'

  group = 'com.arbiter'
  version = '0.0.1-SNAPSHOT'
  sourceCompatibility = '16'

  gradle.projectsEvaluated {
    tasks.withType(JavaCompile) {
      options.compilerArgs << "-Xlint:unchecked,deprecation"
    }
  }

  repositories {
    mavenCentral()
  }

  sourceCompatibility = '16'
  targetCompatibility = '16'

  bootJar {
    enabled = false
  }

  jar {
    enabled = true
  }

  dependencies {
//    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'

    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'io.vavr:vavr:0.10.3'
    implementation 'log4j:log4j:1.2.17'
    implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.10'
    implementation group: 'commons-io', name: 'commons-io', version: '2.8.0'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
//    testImplementation 'org.testcontainers:junit-jupiter'
//    testImplementation 'org.testcontainers:mongodb'
//    testImplementation 'org.testcontainers:rabbitmq'
  }
  test {
    useJUnitPlatform()
  }

  compileJava {
    options.compilerArgs += ['--enable-preview']
  }
  test {
    jvmArgs '--enable-preview'
  }

  tasks.bootJar {
    archiveFileName.set("server.jar")
  }
}